fix pdp flickering header

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -563,6 +563,7 @@
 
     .product-gallery__wrapper {
         padding: unset;
+        width: 100%;
     }
 
     .product-gallery__thumbnails {
